# Meteor-Quant

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  build-frontend.ps1  build-frontend.sh  build-rust.ps1  build-rust.sh  docker-compose.yml  download-timesfm.ps1  download-timesfm.sh  install.ps1  install.sh  prepare-data.ps1  prepare-data.sh  pyproject.toml  resume-markethybrid-run.ps1  resume-markethybrid-run.sh  run.ps1  run.sh  setup-markethybrid.ps1  setup-markethybrid.sh  setup-marketlm.ps1  setup-marketlm.sh  setup-timesfm.ps1  setup-timesfm.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
configs/: markethybrid-15s-quality-4060ti.json
docs/: ARCHITECTURE.md  MARKETHYBRID.md  MARKETHYBRID_STAGED_TRAINING.md  MARKETLM.md  QUICKSTART.md  SHARED_PRICE_SCALE.md  STRATEGY_API.md  TIMESFM.md  VERIFICATION.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  MarketHybridTab.tsx  MarketLMTab.tsx  TradingChart.tsx  api.ts  styles.css  types.ts
rust/meteor-engine/: Cargo.toml
rust/meteor-engine/src/: main.rs
scripts/: bootstrap.py  sync_frontend.py
src/meteor_quant/: __init__.py  __main__.py  api.py  broker.py  cli.py  config.py  datasets.py  domain.py  engine.py  events.py  live.py  market.py  storage.py
src/meteor_quant/markethybrid/: __init__.py  dataset.py  inference.py  jobs.py  model.py  schemas.py  strategy.py  training.py  worker.py
src/meteor_quant/marketlm/: __init__.py  dataset.py  features.py  fileio.py  inference.py  jobs.py  model.py  schemas.py  strategy.py  training.py  worker.py
src/meteor_quant/static/: index.html
src/meteor_quant/static/assets/: index-CPpHoIXI.css  index-KsWrRQmL.js
src/meteor_quant/strategies/: __init__.py  builtin.py  registry.py  sdk.py
src/meteor_quant/timesfm/: __init__.py  runtime.py  strategy.py
tests/: conftest.py  test_api.py  test_datasets.py  test_engine.py  test_kraken_subminute.py  test_markethybrid.py  test_marketlm.py  test_marketlm_fileio.py  test_pending_target.py  test_project_smoke.py  test_registry.py  test_timesfm.py  test_wavetrend.py
user_strategies/: README.md  example_strategy.py
