[package]
name = "meteor-engine"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Streaming event-driven backtest engine for Meteor Quant"

[dependencies]
anyhow = "1.0"
arrow-array = "59.0"
clap = { version = "4.5", features = ["derive"] }
parquet = { version = "59.0", features = ["arrow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
